--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manulah</title>
+     <link rel="stylesheet" href="/css/estilos.css">
+     
   </head>
   <body>
     <nav>
-      <div>
+      <div id="Ejemplo">
         <p>Iconos de redes sociales, logo, contaco, fav, lupa y carrito</p>
       </div>
     </nav>
