--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./p') %>
+<%- include('./partials/head.ejs') %>
   <body>
-    <nav>
-      <div class="ejemplo">
-        <img src="/src/public/images/logo-sf.png" alt="Foto logo" />
-        <p>Iconos de redes sociales, logo, contaco, fav, lupa y carrito</p>
-      </div>
-    </nav>
+    <%- include('../partial/navbar.ejs'); %>
     <main>
       <section>aqui va el carrousel</section>
       <section class="Ejemplo">
