--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -4,4 +4,8 @@
   <title>Manulah</title>
   <link rel="stylesheet" href="/src/public/css/estilos.css" />
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  <script
+    src="https://kit.fontawesome.com/17a9923acb.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
