--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,30 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar con Tailwind CSS</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-gray-100">
+<body class="bg-gray-100">
     <nav class="bg-[#d2a679] p-4 flex justify-between items-center">
-      <!-- Sección izquierda -->
-      <div class="flex space-x-4">
-        <a href="#" class="text-white text-2xl">📷</a>
-        <a href="#" class="text-white text-2xl">📧</a>
-        <a href="#" class="text-white text-2xl">📱</a>
-        <a href="#" class="text-white text-2xl">📍</a>
-      </div>
-
       <!-- Logo central -->
-      <div class="text-white text-3xl font-bold">🌀</div>
-
+      <div class="text-white text-3xl font-bold">
+        <a href="/src/views/home.ejs"><img src="/src/public/images/logo-sf.png" alt="Logo"></a>
+      </div>
       <!-- Sección derecha -->
       <div class="flex space-x-4">
-        <a href="#" class="text-white text-2xl">👤</a>
-        <a href="#" class="text-white text-2xl">⭐</a>
-        <a href="#" class="text-white text-2xl">🔍</a>
-        <a href="#" class="text-white text-2xl">🛒</a>
+        <a href="#" class="text-white text-2xl"><i class="fas fa-search"></i></a>
+        <a href="#" class="text-white text-2xl"><i class="fas fa-user"></i></a>
+        <a href="#" class="text-white text-2xl"><i class="fas fa-shopping-cart"></i
+        ></a>
       </div>
     </nav>
   </body>
