--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manulah</title>
-  </head>
+<%- include('./partials/head.ejs') %>
   <body>
-    <nav>
-      <div>
-        <p>Iconos de redes sociales, logo, contaco, fav, lupa y carrito</p>
-      </div>
-    </nav>
+    <%- include('../partial/navbar.ejs'); %>
     <main>
       <section>aqui va el carrousel</section>
-      <section>
+      <section class="Ejemplo">
         <h2>tipos de productos</h2>
         <p>
           texto "Ofrecemos una amplia cantidad de productos para todos los
@@ -46,7 +38,7 @@
       <div>
         <H2>Queres realizar un pedido o consultar por nuestros cursos?</H2>
         <h2>Contactanos!</h2>
-        <img src="Desing/logo-sf.png" alt="" />
+        <img src="/src/public/images/icon-gmail.png" alt="" />
         <i class="fa-solid fa-envelope">Ejemplode@gmail.com</i>
         <i class="fa-solid fa-location-dot">Algun lugar 123, Buenos Aires</i>
       </div>
