fix estilos y limpieza de archivos innecesarios

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
     <nav class="bg-[#d2a679] p-4 flex justify-between items-center">
       <!-- Logo central -->
       <div class="text-white text-3xl font-bold">
-        <a href="/src/views/home.ejs"><img src="/src/public/images/logo-sf.png" alt="Logo"></a>
+        <a href="/src/views/home.ejs"><img src="/images/logo-sf.png" alt="Logo"></a>
       </div>
       <!-- Sección derecha -->
       <div class="flex space-x-4">
