Home, navbar and routes

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,11 +1,11 @@
 <body class="bg-gray-100">
-    <nav class="bg-[#d2a679] p-4 flex justify-between items-center">
+    <nav class="bg-[#d2a679] p-1 flex justify-between items-center">
       <!-- Logo central -->
-      <div class="text-white text-3xl font-bold">
+      <div class="text-white text-3xl font-bold object-contain h-16 w-16">
         <a href="/src/views/home.ejs"><img src="/images/logo-sf.png" alt="Logo"></a>
       </div>
       <!-- Sección derecha -->
-      <div class="flex space-x-4">
+      <div class="flex space-x-4 ">
         <a href="#" class="text-white text-2xl"><i class="fas fa-search"></i></a>
         <a href="#" class="text-white text-2xl"><i class="fas fa-user"></i></a>
         <a href="#" class="text-white text-2xl"><i class="fas fa-shopping-cart"></i
