--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -2,12 +2,12 @@
     <nav class="bg-[#d2a679] p-1 flex justify-between items-center">
       <!-- Logo central -->
       <div class="text-white text-3xl font-bold object-contain h-16 w-16">
-        <a href="../home"><img src="/images/logo-sf.png" alt="Logo"></a>
+        <a href="./"><img src="/images/logo-sf.png" alt="Logo"></a>
       </div>
       <!-- Sección derecha -->
       <div class="flex space-x-4 ">
         <a href="#" class="text-white text-2xl"><i class="fas fa-search"></i></a>
-        <a href="../register" class="text-white text-2xl"><i class="fas fa-user"></i></a>
+        <a href="../login" class="text-white text-2xl"><i class="fas fa-user"></i></a>
         <a href="../productCart" class="text-white text-2xl"><i class="fas fa-shopping-cart"></i
         ></a>
       </div>
