--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
-  <div class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-md">
-    <h2 class="text-2xl font-semibold text-center mb-4">Iniciar sesión</h2>
-    <form action="/login" method="POST" class="space-y-4">
+  <%- include('./partials/head.ejs') %> <%- include('./partials/navbar.ejs') %>
+  <div class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-md mt-10">
+    <h2 class="text-2xl font-semibold text-center mb-4">Registrarse</h2>
+    <form action="/register" method="POST" class="space-y-4">
+      <input
+        type="text"
+        name="usuario"
+        placeholder="Nombre de usuario"
+        class="w-full p-2 border rounded-md"
+      />
       <input
         type="email"
         name="email"
@@ -16,16 +22,23 @@
         placeholder="Contraseña"
         class="w-full p-2 border rounded-md"
       />
+      <input
+        type="password"
+        name="confirmPassword"
+        placeholder="Confirmar contraseña"
+        class="w-full p-2 border rounded-md"
+      />
+
       <button
         type="submit"
         class="w-full bg-[#d2a679] text-white py-2 rounded-md hover:bg-[#b2825e] transition duration-300"
       >
-        Ingresar
+        Registrarse
       </button>
     </form>
     <p class="text-sm text-center mt-4">
-      ¿No tienes cuenta?
-      <a href="/register" class="text-[#d2a679] font-semibold">Regístrate</a>
+      ¿Ya tienes cuenta?
+      <a href="./login" class="text-[#d2a679] font-semibold">Inicia sesión</a>
     </p>
   </div>
 
