--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -54,13 +54,13 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 p-6">
       <!-- Tarjeta de producto -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-        <img src="/images/producto1.jpg" alt="Producto 1" class="w-full h-48 object-cover">
+        <img src="/images/girasol.jpg" alt="Producto 1" class="w-full h-48 object-cover">
         <div class="p-4">
-            <h3 class="text-lg font-semibold">Producto 1</h3>
+          <a href="./productDetail"><h3 class="text-lg font-semibold">Producto 1</h3></a>
             <p class="text-gray-600">Descripción breve del producto.</p>
             <div class="flex justify-between items-center mt-4">
                 <span class="text-xl font-bold text-[#d2a679]">$29.99</span>
-                <a href="/src/views/addProduct.ejs">
+                <a href="/addProduct">
                   <button class="bg-[#d2a679] text-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:bg-[#b2825e] hover:scale-105">Agregar</button>
                 </a>
             </div>
@@ -69,13 +69,13 @@
 
       <!-- Tarjeta de producto -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-        <img src="/images/producto2.jpg" alt="Producto 2" class="w-full h-48 object-cover">
+        <img src="/images/llavero.jpg" alt="Producto 2" class="w-full h-48 object-cover">
         <div class="p-4">
             <h3 class="text-lg font-semibold">Producto 2</h3>
             <p class="text-gray-600">Descripción breve del producto.</p>
             <div class="flex justify-between items-center mt-4">
                 <span class="text-xl font-bold text-[#d2a679]">$39.99</span>
-                <a href="/src/views/addProduct.ejs">
+                <a href="/addProduct">
                   <button class="bg-[#d2a679] text-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:bg-[#b2825e] hover:scale-105">Agregar</button>
                 </a>
             </div>
@@ -84,13 +84,13 @@
 
       <!-- Tarjeta de producto -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-        <img src="/images/producto3.jpg" alt="Producto 3" class="w-full h-48 object-cover">
+        <img src="/images/muniequera.jpg" alt="Producto 3" class="w-full h-48 object-cover">
         <div class="p-4">
             <h3 class="text-lg font-semibold">Producto 3</h3>
             <p class="text-gray-600">Descripción breve del producto.</p>
             <div class="flex justify-between items-center mt-4">
                 <span class="text-xl font-bold text-[#d2a679]">$49.99</span>
-                <a href="/src/views/addProduct.ejs">
+                <a href="/addProduct">
                   <button class="bg-[#d2a679] text-white px-4 py-2 rounded-md transition duration-300 ease-in-out hover:bg-[#b2825e] hover:scale-105">Agregar</button>
                 </a>
             </div>
@@ -99,7 +99,7 @@
 
       <!-- Tarjeta de producto -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-        <img src="/images/producto4.jpg" alt="Producto 4" class="w-full h-48 object-cover">
+        <img src="/images/torreEiffel.jpg" alt="Producto 4" class="w-full h-48 object-cover">
         <div class="p-4">
             <h3 class="text-lg font-semibold">Producto 4</h3>
             <p class="text-gray-600">Descripción breve del producto.</p>
