--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<%- include('./partials/head.ejs') %>
-v<div class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-md">
+  <%- include('./partials/head.ejs') %> <%- include('./partials/navbar.ejs') %>
+  <div class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-md mt-10">
     <h2 class="text-2xl font-semibold text-center mb-4">Iniciar sesión</h2>
     <form action="/login" method="POST" class="space-y-4">
-        <input type="email" name="email" placeholder="Correo electrónico" class="w-full p-2 border rounded-md">
-        <input type="password" name="password" placeholder="Contraseña" class="w-full p-2 border rounded-md">
-        <button type="submit" class="w-full bg-[#d2a679] text-white py-2 rounded-md hover:bg-[#b2825e] transition duration-300">Ingresar</button>
+      <input
+        type="email"
+        name="email"
+        placeholder="Correo electrónico"
+        class="w-full p-2 border rounded-md"
+      />
+      <input
+        type="password"
+        name="password"
+        placeholder="Contraseña"
+        class="w-full p-2 border rounded-md"
+      />
+      <button
+        type="submit"
+        class="w-full bg-[#d2a679] text-white py-2 rounded-md hover:bg-[#b2825e] transition duration-300"
+      >
+        Ingresar
+      </button>
     </form>
-    <p class="text-sm text-center mt-4">¿No tienes cuenta? <a href="/register" class="text-[#d2a679] font-semibold">Regístrate</a></p>
-</div>
+    <p class="text-sm text-center mt-4">
+      ¿No tienes cuenta?
+      <a href="./register" class="text-[#d2a679] font-semibold">Regístrate</a>
+    </p>
+  </div>
 
-<%- include('./partials/footer.ejs') %>
+  <%- include('./partials/footer.ejs') %>
 </html>
