--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,8 +8,8 @@
       <div class="relative">
         <img
           id="carouselImage"
-          src="/images/imagen1.jpg"
-          class="w-full h-96 object-cover "
+          src="/images/nose.jpg"
+          class="w-full h-96 object-cover justify-content-normal"
         />
       </div>
       <!-- Botones de navegación -->
